working on small issues in Navbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,8 +23,6 @@
      --animate-duration: 8s;
  }
 
-
-
  .nav-section {
      position: sticky;
      top: 0;
@@ -87,6 +85,8 @@
      font-family: "Inria Sans", sans-serif;
  }
 
+
+
  .navbar {
      background-color: rgba(255, 255, 255, 1);
      height: 60px;
@@ -97,6 +97,7 @@
      /* display: flex; */
      background-color: rgba(255, 255, 255, 1);
  }
+
 
  .figure-img {
      margin-left: 10px;
@@ -124,7 +125,6 @@
  .navbar ul li a:hover::after {
      width: 100%;
  }
-
 
  .burger {
      display: none;
@@ -158,16 +158,16 @@
      padding: 5px 25px;
      font-size: 18px;
      font-weight: bolder;
-     background: rgba(255, 255, 255, 1);
-     border: 1px solid rgba(0, 255, 255, 1);
+     background-color: rgba(0, 255, 255, 1);
      border-radius: 5px;
-     transition: all 1s;
-
+     transition: all .5s;
+     font-weight: 500;
+     border: none;
  }
 
  #btn:hover {
-     background-color: rgba(0, 255, 255, 1);
-
+     background: rgb(168, 164, 219);
+     color: white;
  }
 
  /*--------------------------------------
@@ -659,10 +659,14 @@
  }
 
  .contact #btn {
-     border: 2px solid rgba(0, 255, 255, 1);
      font-size: 15px;
      padding: 10px 50px;
+     background: rgba(0, 255, 255, 1);
+ }
 
+ .contact #btn:hover {
+     background: rgb(168, 164, 219);
+     color: white;
  }
 
  .contact-info h2 {
